--- a/index.html
+++ b/index.html
@@ -6,30 +6,47 @@
     <title>Hexlet frontend project</title>
 </head>
 <body>
-    <section class="container-fluid bg-dark p-5">
-        <div class="row">
-            <div class="col-8 text-white mx-auto">
-                <p class="display-3">RSS агрегатор</p>
-                <form action="" class="row">
-                    <div class="col">
-                        <label for="rss-input" class="visually-hidden">RSS</label>
-                        <input class="form-control" id="rss-input" name="url" placeholder="Ссылка RSS" autocomplete="off"
-                               required>
-                    </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-secondary mb-3">Добавить</button>
-                    </div>
-                </form>
-                <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
-                <p class="feedback-message small text-danger"></p>
+    <div class="modal fade" id="modal-window" tabindex="-1" aria-labelledby="modal" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    <button type="button" class="btn btn-primary read-more">Читать полностью</button>
+                </div>
             </div>
         </div>
-    </section>
-    <section class="container-fluid container-xxl p-5">
-        <div class="row">
-            <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
-            <div class="col-md-2 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
-        </div>
-    </section>
+    </div>
+    <main>
+        <section class="container-fluid bg-dark p-5">
+            <div class="row">
+                <div class="col-8 text-white mx-auto">
+                    <p class="display-3">RSS агрегатор</p>
+                    <form action="" class="row">
+                        <div class="col">
+                            <label for="rss-input" class="visually-hidden">RSS</label>
+                            <input class="form-control" id="rss-input" name="url" placeholder="Ссылка RSS" autocomplete="off"
+                                   required>
+                        </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-secondary mb-3">Добавить</button>
+                        </div>
+                    </form>
+                    <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+                    <p class="feedback-message small text-danger"></p>
+                </div>
+            </div>
+        </section>
+        <section class="container-fluid container-xxl p-5">
+            <div class="row">
+                <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+                <div class="col-md-2 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
