--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="modal-body"></div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary read-more">Читать полностью</button>
+                    <button type="button" class="btn btn-primary read-more" data-link="">Читать полностью</button>
                 </div>
             </div>
         </div>
@@ -24,16 +24,20 @@
     <main>
         <section class="container-fluid bg-dark p-5">
             <div class="row">
-                <div class="col-8 text-white mx-auto">
-                    <p class="display-3">RSS агрегатор</p>
-                    <form action="" class="row">
-                        <div class="col">
-                            <label for="rss-input" class="visually-hidden">RSS</label>
-                            <input class="form-control" id="rss-input" name="url" placeholder="Ссылка RSS" autocomplete="off"
-                                   required>
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" class="btn btn-secondary mb-3">Добавить</button>
+                <div class="col-md-10 col-lg-8 mx-auto text-white">
+                    <p class="display-3 mb-0">RSS агрегатор</p>
+                    <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
+                    <form action="" class="text-body">
+                        <div class="row">
+                            <div class="col-12 col-sm-7 col-lg-8">
+                                <div class="form-floating">
+                                    <input class="form-control h-100" id="rss-input" name="url" placeholder="Ссылка RSS" autocomplete="off" aria-label="url">
+                                    <label for="rss-input">Ссылка RSS</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <button type="submit" class="btn btn-primary h-100 mb-3 btn-lg px-sm-5 mt-2 m-sm-0">Добавить</button>
+                            </div>
                         </div>
                     </form>
                     <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
@@ -43,8 +47,8 @@
         </section>
         <section class="container-fluid container-xxl p-5">
             <div class="row">
-                <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
-                <div class="col-md-2 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
+                <div class="col-md-8 col-lg-8 order-1 mx-auto posts"></div>
+                <div class="col-md-4 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
             </div>
         </section>
     </main>
