--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hexlet frontend project</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <div class="modal fade" id="modal-window" tabindex="-1" aria-labelledby="modal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -16,12 +16,12 @@
                 <div class="modal-body"></div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary read-more" data-link="">Читать полностью</button>
+                    <a class="btn btn-primary read-more" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a>
                 </div>
             </div>
         </div>
     </div>
-    <main>
+    <main class="flex-grow-1">
         <section class="container-fluid bg-dark p-5">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto text-white">
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <button type="submit" class="btn btn-primary h-100 mb-3 btn-lg px-sm-5 mt-2 m-sm-0">Добавить</button>
+                                <button type="submit" class="btn btn-primary h-100 mb-3 btn-lg px-3 px-sm-5 mt-2 m-sm-0">Добавить</button>
                             </div>
                         </div>
                     </form>
@@ -47,10 +47,19 @@
         </section>
         <section class="container-fluid container-xxl p-5">
             <div class="row">
-                <div class="col-md-8 col-lg-8 order-1 mx-auto posts"></div>
-                <div class="col-md-4 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
+                <div class="col-md-8 order-1 mx-auto posts"></div>
+                <div class="col-md-4 mx-auto order-0 order-lg-1 feeds"></div>
             </div>
         </section>
     </main>
+    <footer class="footer border-top py-3 mt-5 bg-light">
+        <div class="container-xl">
+            <div class="text-center">
+                <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
+                project, made by
+                <a href="https://github.com/AndreiIlin" target="_blank">Andrei Ilin</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
