--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <button type="submit" role="button" name="add" class="btn btn-primary h-100 mb-3 btn-lg px-3 px-sm-5 mt-2 m-sm-0">Добавить</button>
+                                <button type="submit" aria-label="add" class="btn btn-primary h-100 mb-3 btn-lg px-3 px-sm-5 mt-2 m-sm-0">Добавить</button>
                             </div>
                         </div>
                     </form>
